# yolov8-blur

./: .gitignore  CITATION.bib  coco-classes.yaml  flake.nix  list_cameras.py  main.py  pyproject.toml  readme.md  requirements-amd.txt  requirements-cuda.txt  requirements.txt  test.py  test2.py
.github/: dependabot.yml
.github/workflows/: action.yml  build.yml
src/: configurator.py  list_cameras.py  main.py  processing.py  videoprocessor.py
